log
Fri Mar 11 18:54:01 HSP 2022: 
 tests:  0|7
total_score: 0/70
a909887
Fri Mar 11 18:55:41 HSP 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:8: error: 'a' redeclared as different kind of symbol
    int a, b, c;
        ^
exercises.c:14:15: note: previous definition of 'a' was here
 void suma(int a, int b, int * c) {
               ^
exercises.c:15:11: error: 'b' redeclared as different kind of symbol
    int a, b, c;
           ^
exercises.c:14:22: note: previous definition of 'b' was here
 void suma(int a, int b, int * c) {
                      ^
exercises.c:15:14: error: 'c' redeclared as different kind of symbol
    int a, b, c;
              ^
exercises.c:14:31: note: previous definition of 'c' was here
 void suma(int a, int b, int * c) {
                               ^
exercises.c:20:11: error: 'return' with a value, in function returning void [-Werror]
    return 0;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c:16:11: error: unused variable 'i' [-Werror=unused-variable]
    size_t i;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
6cbafc5
Fri Mar 11 19:44:25 HSP 2022: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|6
total_score: 10/70
83842d6
Sat Mar 12 17:47:27 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:65:17: error: "/*" within comment [-Werror=comment]
    return NULL; /*
                  
exercises.c:68:1: error: "/*" within comment [-Werror=comment]
 /*
  
test.c:103:6: error: 'nombre' redeclared as different kind of symbol
 char nombre[30]; int edad;
      ^~~~~~
In file included from test.c:5:0:
exercises.c:57:28: note: previous definition of 'nombre' was here
 Persona* crearPersona(char nombre[], char rut[], int edad) {
                            ^~~~~~
test.c:103:22: error: 'edad' redeclared as different kind of symbol
 char nombre[30]; int edad;
                      ^~~~
In file included from test.c:5:0:
exercises.c:57:54: note: previous definition of 'edad' was here
 Persona* crearPersona(char nombre[], char rut[], int edad) {
                                                      ^~~~
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
test.c:266:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7522074
